fixes paragraph burst spacing bug

--- a/public/js/views/chat/chatItemView.less
+++ b/public/js/views/chat/chatItemView.less
@@ -50,10 +50,13 @@
     color: #888;
   }
 
-  /* this handles all styles for burst continuation */
+  &.burstStart {
+    padding-bottom: 0.5em;
+  }
+
   &.burstContinued {
 
-    padding-top: 0.5em;
+    padding: 0.5em 0;
     .chat-item__container {
       padding: 0px 30px 0px 30px;
     }
@@ -286,6 +289,10 @@
 
   p:first-child {
     margin-top: 0;
+  }
+
+  p:last-child {
+    margin-bottom: 0;
   }
 
 /*  p:last-child {
